force-app/main/default/objects/Reference_HNBF__c/Reference_HNBF__c.object-meta.xml
<CustomObject>
    <label>Reference Agency</label>
    <nameField>
        <displayFormat>Reference HNBF-{0000000}</displayFormat>
        <label>Reference HNBF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Agencys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>