force-app/main/default/objects/Reference_HNBF__c/fields/AOR_with_RENEWAL_FLEX_Submissions__c.field-meta.xml
<CustomField>
    <fullName>AOR_with_RENEWAL_FLEX_Submissions__c</fullName>
    <formula>IF(AND(NOT(Flock__c),OR(ISPICKVAL(Submission_Type__c,&quot;Renewal within 30 days&quot;),ISPICKVAL(Submission_Type__c,&quot;Renewal within 60 days&quot;),ISPICKVAL(Submission_Type__c,&quot;Renewal within 90 days&quot;),ISPICKVAL(Submission_Type__c,&quot;AOR with Renewal&quot;))),
(IF( OR( ISPICKVAL( AOR_Letter__c , &quot;Completed&quot;),ISPICKVAL( AOR_Letter__c , &quot;N/A&quot;) ), 1, 0) +
IF( OR( ISPICKVAL( Current_Invoice__c , &quot;Completed&quot;), ISPICKVAL( Current_Invoice__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( Disclosure__c , &quot;Completed&quot;), ISPICKVAL( Disclosure__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( EE_Apps__c , &quot;Completed&quot;), ISPICKVAL( EE_Apps__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( EE_Designation_of_Class_Codes__c , &quot;Completed&quot;), ISPICKVAL( EE_Designation_of_Class_Codes__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( ER_App__c , &quot;Completed&quot;), ISPICKVAL( ER_App__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( Final_Rates__c , &quot;Completed&quot;), ISPICKVAL( Final_Rates__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( InfoPath__c , &quot;Completed&quot;), ISPICKVAL( InfoPath__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( Renewal_Paperwork_Upcoming__c , &quot;Completed&quot;), ISPICKVAL( Renewal_Paperwork_Upcoming__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( SBCs__c , &quot;Completed&quot;), ISPICKVAL( SBCs__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( Service_Agreements_POP_COBRA__c , &quot;Completed&quot;), ISPICKVAL( Service_Agreements_POP_COBRA__c , &quot;N/A&quot;) ) , 1, 0) +
IF( OR( ISPICKVAL( Fee_Disclosure_Proxy__c , &quot;Completed&quot;), ISPICKVAL( Fee_Disclosure_Proxy__c , &quot;N/A&quot;) ) , 1, 0) )/12
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOR with RENEWAL FLEX/HRIS Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>