force-app/main/default/objects/Reference_HNBF__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>