force-app/main/default/objects/Reference_HNBF__c/fields/Client_Benefit_Structure__c.field-meta.xml
<CustomField>
    <fullName>Client_Benefit_Structure__c</fullName>
    <label>Client Benefit Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HB</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PEO/PIA</fullName>
            </value>
            <value>
                <fullName>PEO Standalone</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Benetrac.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>