force-app/main/default/objects/Reference_HNBF__c/fields/Client_Size__c.field-meta.xml
<CustomField>
    <fullName>Client_Size__c</fullName>
    <label>Client Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBG</fullName>
            </value>
            <value>
                <fullName>1 to 4</fullName>
            </value>
            <value>
                <fullName>5 to 49</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
            <value>
                <fullName>H&amp;B CSW</fullName>
            </value>
            <value>
                <fullName>1-6</fullName>
            </value>
            <value>
                <fullName>7-19</fullName>
            </value>
            <value>
                <fullName>20-34</fullName>
            </value>
            <value>
                <fullName>35-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>