force-app/main/default/objects/Reference_HNBF__c/fields/Current_Step_Details__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Details__c</fullName>
    <description>BU: Agency
Manual or Fed: Manual
Brief Description:  Field is used to add additional information about the Current Step field
Case#16185195</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Step Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>