force-app/main/default/objects/Reference_HNBF__c/fields/Date_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_reviewed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date reviewed</label>
    <type>Date</type>
</CustomField>