force-app/main/default/objects/Reference_HNBF__c/fields/Days_in_New_Case_to_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_in_New_Case_to_Onboarding_Complete__c</fullName>
    <formula>New_Date__c  -  Sent_to_New_Case_Onboarding_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in New Case to Onboarding Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>