force-app/main/default/objects/Reference_HNBF__c/fields/Days_to_Imp_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Imp_Call_Completed__c</fullName>
    <description>Calculates the number of days between the created date and the Implementation Call Complete Date. If Implementation call complete date is blank, null is returned.</description>
    <formula>IF( ISNULL( Implementation_Call_Completed__c ) , Null, 

Implementation_Call_Completed__c - datevalue(CreatedDate) - 2*( floor((Implementation_Call_Completed__c - DATE(1985, 6, 24))/7) - floor((datevalue(CreatedDate) - DATE(1985, 6, 24))/7)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Imp Call Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>