force-app/main/default/objects/Reference_HNBF__c/fields/Den_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Den_Plan_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Den Plan Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>