force-app/main/default/objects/Reference_HNBF__c/fields/Den_Plan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Den_Plan_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Den Plan Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>