force-app/main/default/objects/Reference_HNBF__c/fields/Direct_To_Employee_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Direct_To_Employee_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct To Employee Timestamp</label>
    <type>DateTime</type>
</CustomField>