force-app/main/default/objects/Reference_HNBF__c/fields/Disp_Scrubbed_for_Ops__c.field-meta.xml
<CustomField>
    <fullName>Disp_Scrubbed_for_Ops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disp - Scrubbed for Ops</label>
    <type>Checkbox</type>
</CustomField>