force-app/main/default/objects/Reference_HNBF__c/fields/ESR_Admin_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ESR_Admin_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESR Admin Start Date</label>
    <type>Date</type>
</CustomField>