force-app/main/default/objects/Reference_HNBF__c/fields/ESR_paperwork_received__c.field-meta.xml
<CustomField>
    <fullName>ESR_paperwork_received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESR paperwork received</label>
    <type>Date</type>
</CustomField>