force-app/main/default/objects/Reference_HNBF__c/fields/Filing_Stage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Filing_Stage_Timestamp__c</fullName>
    <description>Filled in by workflow when Filing Stage is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing Stage Timestamp</label>
    <type>DateTime</type>
</CustomField>