force-app/main/default/objects/Reference_HNBF__c/fields/Financial_Rat_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Financial_Rat_Disclosure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Rat. Disclosure</label>
    <type>Date</type>
</CustomField>