force-app/main/default/objects/Reference_HNBF__c/fields/HNBF_Imp_Call_Pending__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Imp_Call_Pending__c</fullName>
    <formula>IF(ISBLANK(Implementation_Call_Completed__c), 

TEXT(CASE(MOD( Datevalue(CreatedDate) - DATE(1985,6,24),7), 
 0 , CASE( MOD( TODAY()- Datevalue(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 1 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 2 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 3 , CASE( MOD( TODAY()- Datevalue(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 4 , CASE( MOD( TODAY()- Datevalue(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 5 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 6 , CASE( MOD( TODAY() - Datevalue(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 999) 
 + 
 (FLOOR(( TODAY() - Datevalue(CreatedDate) )/7)*5)), 

&quot;Completed!&quot;&amp; &quot; &quot;&amp;IMAGE(&quot;/img/msg_icons/confirm24.png&quot;,&quot; &quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HNBF Imp Call Pending</label>
    <type>Text</type>
</CustomField>