force-app/main/default/objects/Reference_HNBF__c/fields/IC_Rep_Assigned__c.field-meta.xml
<CustomField>
    <fullName>IC_Rep_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IC Rep Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Agencys6</relationshipName>
    <type>Lookup</type>
</CustomField>