force-app/main/default/objects/Reference_HNBF__c/fields/Incorrect_deduction_mngt_expectations__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_deduction_mngt_expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect or missing plan or products</label>
    <type>Checkbox</type>
</CustomField>