force-app/main/default/objects/Reference_HNBF__c/fields/Incorrect_or_missing_service_agreement__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_or_missing_service_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect or missing service agreement</label>
    <type>Checkbox</type>
</CustomField>