force-app/main/default/objects/Reference_HNBF__c/fields/Infopath_Received__c.field-meta.xml
<CustomField>
    <fullName>Infopath_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Infopath Received</label>
    <type>Date</type>
</CustomField>