force-app/main/default/objects/Reference_HNBF__c/fields/Large_Group_IC__c.field-meta.xml
<CustomField>
    <fullName>Large_Group_IC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>case #25405517</description>
    <label>Large Group IC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Agencys3</relationshipName>
    <type>Lookup</type>
</CustomField>