force-app/main/default/objects/Reference_HNBF__c/fields/Missing_Document_Missing_Plan_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>Missing_Document_Missing_Plan_Eff_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Document? Missing Plan Eff. Date</label>
    <type>Checkbox</type>
</CustomField>