force-app/main/default/objects/Reference_HNBF__c/fields/Missing_Document_Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Missing_Document_Schedule_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Document? Schedule A</label>
    <type>Checkbox</type>
</CustomField>