force-app/main/default/objects/Reference_HNBF__c/fields/Monthly_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Admin_Fee__c</fullName>
    <label>Monthly Admin Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>