force-app/main/default/objects/Reference_HNBF__c/fields/Need_DOBs_Max_child_amount__c.field-meta.xml
<CustomField>
    <fullName>Need_DOBs_Max_child_amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need DOBs/Max child amount</label>
    <type>Checkbox</type>
</CustomField>