force-app/main/default/objects/Reference_HNBF__c/fields/No_Call_Needed_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Call_Needed_Reason__c</fullName>
    <label>No Call Needed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary Only</fullName>
            </value>
            <value>
                <fullName>Child Company</fullName>
            </value>
            <value>
                <fullName>Less Than 5 Apps</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>