force-app/main/default/objects/Reference_HNBF__c/fields/Number_of_discrepancies_identified_in_sc__c.field-meta.xml
<CustomField>
    <fullName>Number_of_discrepancies_identified_in_sc__c</fullName>
    <label>Number of discrepancies identified in sc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>