force-app/main/default/objects/Reference_HNBF__c/fields/Onboarding_Email_Aging__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Email_Aging__c</fullName>
    <description>Calculates the number of days between the date received to the date the onboarding email is sent. If date the onboarding email sent is blank, null is returned.</description>
    <formula>ABS(IF( ISBLANK(Onboarding_email_sent__c ), NULL, Onboarding_email_sent__c-Date_Received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Email Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>