force-app/main/default/objects/Reference_HNBF__c/fields/Policy_Sheet_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Policy_Sheet_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Sheet Emailed</label>
    <type>Checkbox</type>
</CustomField>