force-app/main/default/objects/Reference_HNBF__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <label>POP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No POP</fullName>
            </value>
            <value>
                <fullName>Third Party Administrator</fullName>
            </value>
            <value>
                <fullName>Paychex Administered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>