force-app/main/default/objects/Reference_HNBF__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <formula>Case_Number__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Client Name</label>
    <type>Text</type>
</CustomField>