force-app/main/default/objects/Reference_HNBF__c/fields/Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Status__c</fullName>
    <label>Quality Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pass with Errors</fullName>
            </value>
            <value>
                <fullName>QC Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>