force-app/main/default/objects/Reference_HNBF__c/fields/Quotes_Gathered__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Gathered__c</fullName>
    <label>Quotes Gathered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>