force-app/main/default/objects/Reference_HNBF__c/fields/Received_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Received_Invoices__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Invoices</label>
    <type>Date</type>
</CustomField>