force-app/main/default/objects/Reference_HNBF__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <formula>Case_Number__r.Account.Relationship_Manager_PEO_Client_Advocate__r.Full_Name__c</formula>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>