force-app/main/default/objects/Reference_HNBF__c/fields/Renewal_processed_by_New_Case__c.field-meta.xml
<CustomField>
    <fullName>Renewal_processed_by_New_Case__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal processed by New Case</label>
    <type>Date</type>
</CustomField>