force-app/main/default/objects/Reference_HNBF__c/fields/Requested_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Requested_Invoices__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Invoices</label>
    <type>Date</type>
</CustomField>