force-app/main/default/objects/Reference_HNBF__c/fields/Sale_not_moving_forward_date__c.field-meta.xml
<CustomField>
    <fullName>Sale_not_moving_forward_date__c</fullName>
    <description>case #25405517</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale not moving forward date</label>
    <type>Date</type>
</CustomField>