force-app/main/default/objects/Reference_HNBF__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_HNBFs</relationshipName>
    <type>Lookup</type>
</CustomField>