force-app/main/default/objects/Reference_HNBF__c/fields/Scanned_to_Webors__c.field-meta.xml
<CustomField>
    <fullName>Scanned_to_Webors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scanned to WebORS</label>
    <type>Date</type>
</CustomField>