force-app/main/default/objects/Reference_HNBF__c/fields/Set_up_complete__c.field-meta.xml
<CustomField>
    <fullName>Set_up_complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Set up complete</label>
    <type>Date</type>
</CustomField>