force-app/main/default/objects/Reference_HNBF__c/fields/States_to_File__c.field-meta.xml
<CustomField>
    <fullName>States_to_File__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>States to File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>