force-app/main/default/objects/Reference_HNBF__c/fields/STD_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>STD_Plan_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>STD Plan Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>