force-app/main/default/objects/Reference_HNBF__c/fields/Submission_From__c.field-meta.xml
<CustomField>
    <fullName>Submission_From__c</fullName>
    <label>Submission From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Inside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>