force-app/main/default/objects/Reference_HNBF__c/fields/Transition_Email_Aging__c.field-meta.xml
<CustomField>
    <fullName>Transition_Email_Aging__c</fullName>
    <description>Calculates the number of days between the date setup complete email received to the date the transition email is sent. If date the transition email sent is blank, null is returned.</description>
    <formula>ABS(IF( ISBLANK( Transition_email_sent__c ) , NULL, Transition_email_sent__c - Set_up_complete_email_received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transition Email Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>