force-app/main/default/objects/Reference_HNBF__c/fields/Typeable_Premiums__c.field-meta.xml
<CustomField>
    <fullName>Typeable_Premiums__c</fullName>
    <label>Typeable Premiums</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>