force-app/main/default/objects/Reference_HNBF__c/fields/Welcome_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Scheduled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Welcome Call Scheduled Date</label>
    <type>Date</type>
</CustomField>