force-app/main/default/objects/Reference_HNBF__c/fields/Zone_Manager__c.field-meta.xml
<CustomField>
    <fullName>Zone_Manager__c</fullName>
    <formula>Sales_Rep__r.Manager.Manager.FirstName &amp; &quot; &quot; &amp;  Sales_Rep__r.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Manager</label>
    <type>Text</type>
</CustomField>