force-app/main/default/objects/Reference_HNBF__c/recordTypes/HNB_Enrollments_ATC_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HNB_Enrollments_ATC_Record_Type</fullName>
    <active>true</active>
    <label>HNB Enrollments ATC Record Type</label>
</RecordType>