force-app/main/default/objects/Reference_HNBF__c/recordTypes/Reference_Benetrac_ESR_Dedicated_Service_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Reference_Benetrac_ESR_Dedicated_Service_Record_Type</fullName>
    <active>true</active>
    <description>Basically the same as ESR Dedicated Service but for Benetrac clients</description>
    <label>Reference Benetrac ESR Dedicated Service Record Type</label>
</RecordType>