force-app/main/default/objects/Reference_HNBF__c/recordTypes/Reference_ESR_Dedicated_Service_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Reference_ESR_Dedicated_Service_Record_Type</fullName>
    <active>true</active>
    <label>Reference ESR Dedicated Service Record Type</label>
</RecordType>