force-app/main/default/objects/Reference_HNBF__c/recordTypes/Reference_HNBF.recordType-meta.xml
<RecordType>
    <fullName>Reference_HNBF</fullName>
    <active>true</active>
    <label>Reference HNBF</label>
</RecordType>