force-app/main/default/objects/Reference_HNBF__c/recordTypes/Reference_HNBF_LGO_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Reference_HNBF_LGO_Record_Type</fullName>
    <active>true</active>
    <description>record type for Large Group HNBF clients</description>
    <label>Reference HNBF LGO Record Type</label>
</RecordType>