force-app/main/default/objects/Reference_HNBF__c/validationRules/Additional_missing_incorrect_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_missing_incorrect_info</fullName>
    <active>true</active>
    <description>If Additional missing incorrect info is true then Comments cannot be blank</description>
    <errorConditionFormula>(ISPICKVAL(Submission_Type__c, &quot;AOR&quot;) || ISPICKVAL(Submission_Type__c, &quot;AOR and New Case&quot;) || ISPICKVAL(Submission_Type__c, &quot;New Case&quot;))
&amp;&amp; Additional_missing_incorrect_info__c
&amp;&amp; ISBLANK(Comments1__c)</errorConditionFormula>
    <errorMessage>A Comment is required if Additional missing, incorrect info is true</errorMessage>
</ValidationRule>