force-app/main/default/objects/Reference_HNBF__c/validationRules/Controlled_Ownership_ID_Count_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Controlled_Ownership_ID_Count_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
RecordType.DeveloperName =&quot;Reference_ESR_Record_Type&quot;,
Controlled_Ownership__c, 
OR 
( 
Controlled_Ownership_ID_Count__c &lt;= 0, 
ISBLANK(Controlled_Ownership_ID_Count__c) 
) 
)</errorConditionFormula>
    <errorDisplayField>Controlled_Ownership_ID_Count__c</errorDisplayField>
    <errorMessage>Please enter Controlled_Ownership_ID_Count if Controlled Ownership is checked.</errorMessage>
</ValidationRule>