force-app/main/default/objects/Reference_HNBF__c/validationRules/Controlled_Ownership_ID_Count_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Controlled_Ownership_ID_Count_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
Controlled_Ownership__c = False,
Controlled_Ownership_ID_Count__c &gt;0,
RecordType.DeveloperName =&quot;Reference_ESR_Record_Type&quot;
)</errorConditionFormula>
    <errorDisplayField>Controlled_Ownership_ID_Count__c</errorDisplayField>
    <errorMessage>Please remove Controlled_Ownership_ID_Count if Controlled Ownership is unchecked.</errorMessage>
</ValidationRule>