force-app/main/default/objects/Reference_HNBF__c/validationRules/Current_Step_Onboarding_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Step_Onboarding_Complete</fullName>
    <active>true</active>
    <description>Before the Current Step can be changed to Onboarding Completed all open issues need to be resolved</description>
    <errorConditionFormula>ISPICKVAL(Current_Step__c, &quot;Onboarding Complete&quot;)&amp;&amp;
(ISPICKVAL(Submission_Type__c, &quot;AOR&quot;) || ISPICKVAL(Submission_Type__c, &quot;AOR and New Case&quot;))&amp;&amp;
(
Sox_Status_None_Count__c &gt; 0 ||
(
(ISBLANK(Infopath_Received__c) || ISBLANK(Set_up_complete_email_received__c) || Policy_Type_Total_of_EEs__c &lt; 1 || Carrier_Other_Count__c &gt; 0)
)
)</errorConditionFormula>
    <errorMessage>You must resolve any Open Items, Sales Submission items, InfoPath Received, Set up Complete email received and Policy items: Sox Status, Total # of EEs, and Carriers before the Current Step can be changed to Onboarding Complete</errorMessage>
</ValidationRule>