force-app/main/default/objects/Reference_HNBF__c/validationRules/Date_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Received</fullName>
    <active>true</active>
    <description>Once Date Received is populated it cannot be changed</description>
    <errorConditionFormula>ISCHANGED( Date_Received__c )&amp;&amp; NOT(ISNULL(PRIORVALUE( Date_Received__c )))
 &amp;&amp;
 $User.ProfileId !=&apos;00e70000001FcCE&apos;</errorConditionFormula>
    <errorMessage>Once Date Received is populated it can only be changed by a supervisor,</errorMessage>
</ValidationRule>