force-app/main/default/objects/Reference_HNBF__c/validationRules/Direct_To_Employee_is_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_To_Employee_is_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Direct_To_Employee__c, &quot;No&quot;),
RecordTypeId = &quot;012700000001jf1&quot;,
OR
(
NOT(ISBLANK(Direct_To_Employee_Price_Per_EE_Fee__c)),
NOT(ISBLANK(Direct_To_Employee_Discount__c))
)
)</errorConditionFormula>
    <errorMessage>You cannot enter value in Direct To Employee Price Per EE Fee field and Direct To Employee Discount field</errorMessage>
</ValidationRule>